# zeta_education_examples

./: README.md
C++_Basic/: basic.cpp  basic1.cpp  basic_variable1.cpp  basic_variable2.cpp  function1.cpp  function2.cpp  function_ni.cpp  if1.cpp  loop.cpp  loop1.cpp  loop2.cpp  loop3.cpp  switch.cpp  switch1.cpp  switch_game.cpp
C++_CLASS/: CMakeLists.txt  class.cpp  class1.cpp  class2.cpp  class_error.cpp  client_class.cpp  file.cpp  file_our_passion  server_class.cpp  server_class_bind.cpp
C++_Structure/: array.cpp  array1.cpp  pointer.cpp  pointer1.cpp  string.cpp  string1.cpp  structure.cpp  structure2.cpp  stucture1.cpp
Hello_ros_pkg/: CMakeLists.txt  package.xml
Hello_ros_pkg/src/: hello_Robot_fun_node.cpp  hello_Robot_node.cpp  hello_world_node.cpp
My Project/: CMakeList.txt  Hello World.cpp  My Projcet.cpp  My name.cpp  union.launch
My Project/launch/: union.launch
My Project/src/: Hello World.cpp  My_Projcet.cpp  My_name.cpp
my_project_pkg/: CMakeList.txt  CMakeLists.txt  package.xml
my_project_pkg/src/: My_name.cpp  hello_world_node.cpp
my_python_example/: 10.br31.py  11.maze.py  12.notepad.py  2.calculator2.py  3.calculator3.py  4.hello_world.py  5.guess_number.py  6.count_digits.py  7.factorial.py  8.rcp.py  9.diamond.py  br31.py  calculator.py  memo.py
my_python_example/1.edit/: 1.blur.py  3.edge.py
my_python_example/1.numpy/: 1.trans.py  2.inverse.py  3.random.py
ros_tutorials_parameter/: CMakeLists.txt  package.xml
ros_tutorials_service/: CMakeLists.txt  package.xml
ros_tutorials_topic/: CMakeLists.txt  package.xml
(+22 files in other folders)
