cmake_minimum_required(VERSION 2.8.3)
project(Hello_ros_pkg)
find_package(catkin REQUIRED COMPONENTS roscpp std_msgs)
catkin_package(CATKIN_DEPENDS roscpp std_msgs)
include_directories(${catkin_INCLUDE_DIRS})
add_executable(hello_Robot_node src/hello_Robot_node.cpp)
target_link_libraries(hello_Robot_node ${catkin_LIBRARIES})
